添加 Release 自动打包和上传功能
- 创建 release.yml workflow：自动构建、生成校验和、创建安装脚本并上传
- 更新 ci.yml workflow：添加 JAR 验证、测试和 artifacts 上传
- 创建安装脚本：install.sh (Linux/macOS) 和 install.bat (Windows)
- 更新 PACKAGING.md：添加自动发布、手动发布、校验和验证说明
- 更新 README.md：添加下载和安装说明
- 创建 INSTALL.md：详细安装指南和常见问题解答

功能特性：
- 自动从 Release tag 提取版本号
- 自动生成 SHA256 校验和文件
- 自动创建跨平台安装脚本
- 自动验证 JAR 文件完整性
- 支持多平台（Linux、macOS、Windows）